<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">
    </LinearLayout>
    <EditText
        android:id="@+id/idEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/idSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintSenha"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/idLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintLogin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top">
        <Button
            android:id="@+id/idRegistroLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintRegistrar"/>
    </LinearLayout>
</LinearLayout>